[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/art/knight/body.png" type="Texture" id=1]
[ext_resource path="res://Knight.gd" type="Script" id=2]
[ext_resource path="res://assets/art/knight/helm.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 13.0

[sub_resource type="Animation" id=2]
resource_name = "hit"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.890196, 0.333333, 0.333333, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Knight" type="KinematicBody2D"]
position = Vector2( 105.115, 104.039 )
script = ExtResource( 2 )

[node name="right_hand" type="Node2D" parent="."]
position = Vector2( 7, 0 )

[node name="left_hand" type="Node2D" parent="."]
position = Vector2( -7, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="body" type="Sprite" parent="."]
rotation = 3.14159
texture = ExtResource( 1 )

[node name="head" type="Sprite" parent="."]
light_mask = 2
rotation = 3.14159
texture = ExtResource( 3 )

[node name="hit_cooldown" type="Timer" parent="."]
wait_time = 0.4

[node name="anim" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 2 )
[connection signal="timeout" from="hit_cooldown" to="." method="_on_hit_cooldown_timeout"]
